--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.3",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/styled-components-react-native": "^5.2.0",
     "typescript": "~4.3.5"
   },
   "private": true
